Villanova_Dev1/src/objects/SFDC_Food__c.object
<CustomObject>
    <description>This is an object used to create a many-to-many join between Special Events and &quot;Food and Beverage&quot;.</description>
    <fields>
        <fullName>Food_Type__c</fullName>
        <label>Food Type</label>
        <picklist>
            <picklistValues>
                <fullName>Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drinks Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dessert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_People_on_Order__c</fullName>
        <label>Number of People on Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Special_Event__c</fullName>
        <label>Special Event</label>
        <referenceTo>SFDC_Special_Event__c</referenceTo>
        <relationshipName>R00N60000001HpzZEAS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Specific_Menu__c</fullName>
        <label>Specific Menu</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <referenceTo>SFDC_Vendor_Partner__c</referenceTo>
        <relationshipName>R00N60000001HpzhEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Food &amp; Beverage</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Food Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Food &amp; Beverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>